--- a/src/pages/DashboardInterviewer.css
+++ b/src/pages/DashboardInterviewer.css
@@ -15,13 +15,13 @@
 .today1 {
     position: absolute;
     top: 0;
-    left: calc(50% - 1.42vw);
+    left: 1.2vw;
     font-size: var(--font-size-base);
     letter-spacing: -0.02em;
     line-height: 2.78vw;
     font-family: var(--font-avenir-lt-std);
     color: var(--purple);
-    text-align: left
+   
     }
 .today-container {
     cursor: pointer;
