--- a/src/pages/InterviewsDashboardIndividual2.css
+++ b/src/pages/InterviewsDashboardIndividual2.css
@@ -32,7 +32,7 @@
 .upcoming3 {
     position: absolute;
     top: 0;
-    left: calc(50% - 2.48vw);
+    left: 1.5vw;
     font-size: var(--font-size-base);
     letter-spacing: -0.02em;
     line-height: 2.78vw;
