--- a/src/pages/DreamCompanyDashboardIndivi.css
+++ b/src/pages/DreamCompanyDashboardIndivi.css
@@ -101,7 +101,9 @@
     width: 23.02vw;
     height: 12.04vw;
     overflow: hidden;
-    flex-shrink: 0
+    flex-shrink: 0;
+    top: 0.08vw;
+    margin-bottom: 0.49vw;
     }
 .company-logo-icon17, .company-logo-icon19 {
     position: absolute;
@@ -127,7 +129,9 @@
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-13xl)
+    gap: var(--gap-13xl);
+   max-height:50vw;
+    overflow:auto;
     }
 .icbaseline-plus-icon15 {
     position: relative;
