--- a/src/pages/InterviewsDashboardIndividual2.css
+++ b/src/pages/InterviewsDashboardIndividual2.css
@@ -152,7 +152,8 @@
     width: 23.21vw;
     height: 12.04vw;
     overflow: hidden;
-    flex-shrink: 0
+    flex-shrink: 0;
+    margin-bottom: 0.18vw;
     }
 .div138 {
     position: relative;
@@ -184,16 +185,17 @@
     }
 .frame-parent178 {
     position: absolute;
-    top: 10.32vw;
+    top:9.32vw;
     left: 1.59vw;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
     gap: var(--gap-5xl);
-    
+    /* height:50vw; */
     flex-wrap:wrap;
-    
+    overflow:auto;
+    max-height:42.5vw;  
     }
 
 .frame-parent182 {
