left interview margin

--- a/src/pages/DreamCompanyDashboardIndivi.css
+++ b/src/pages/DreamCompanyDashboardIndivi.css
@@ -98,12 +98,13 @@
     position: relative;
     border-radius: var(--br-base);
     box-shadow: -0.13vw 0 0 rgba(0, 0, 0, 0.1), 0.13vw -0.13vw 0 rgba(0, 0, 0, 0.1), 0 0.2vw 0 #605bff;
-    width: 23.02vw;
+    width: 22.2vw;
     height: 12.04vw;
     overflow: hidden;
     flex-shrink: 0;
     top: 0.08vw;
     margin-bottom: 0.49vw;
+    margin-left: 0.05vw;
     }
 .company-logo-icon17, .company-logo-icon19 {
     position: absolute;
