--- a/src/pages/InterviewsDashboardIndividual.css
+++ b/src/pages/InterviewsDashboardIndividual.css
@@ -155,6 +155,7 @@
     overflow: hidden;
     flex-shrink: 0;
     margin-bottom: 0.18vw;
+    margin-left: 0.08vw;
     }
 .div138 {
     position: relative;
