--- a/src/pages/InterviewsDashboardIndividual1.css
+++ b/src/pages/InterviewsDashboardIndividual1.css
@@ -190,6 +190,7 @@
     overflow: hidden;
     flex-shrink: 0;
     margin-bottom:1.8vw;
+    margin-left: 0.08vw;
     }
 .div132 {
     position: relative;
