--- a/src/pages/InterviewsDashboardIndividual2.css
+++ b/src/pages/InterviewsDashboardIndividual2.css
@@ -154,6 +154,8 @@
     overflow: hidden;
     flex-shrink: 0;
     margin-bottom: 0.18vw;
+    margin-left: 0.08vw;
+
     }
 .div138 {
     position: relative;
