--- a/src/pages/InterviewsDashboardIndividual.css
+++ b/src/pages/InterviewsDashboardIndividual.css
@@ -156,6 +156,8 @@
     flex-shrink: 0;
     margin-bottom: 0.18vw;
     margin-left: 0.08vw;
+    margin-top: 0.08vw;
+
     }
 .div138 {
     position: relative;
