--- a/src/pages/InterviewsDashboardIndividual1.css
+++ b/src/pages/InterviewsDashboardIndividual1.css
@@ -191,6 +191,7 @@
     flex-shrink: 0;
     margin-bottom:1.8vw;
     margin-left: 0.08vw;
+    margin-top: 0.08vw;
     }
 .div132 {
     position: relative;
