--- a/src/pages/DashboardInterviewer1.css
+++ b/src/pages/DashboardInterviewer1.css
@@ -155,10 +155,13 @@
     position: relative;
     border-radius: var(--br-base);
     box-shadow: -0.13vw 0 0 rgba(0, 0, 0, 0.1), 0.13vw -0.13vw 0 rgba(0, 0, 0, 0.1), 0 0.2vw 0 #605bff;
-    width: 23.21vw;
+    width: 22.7vw;
     height: 12.04vw;
     overflow: hidden;
-    flex-shrink: 0
+    flex-shrink: 0;
+    top: 0.08vw;
+    margin-bottom: 0.49vw;
+    margin-left: 0.08vw;
     }
 .div47 {
     position: relative;
@@ -235,13 +238,16 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: var(--gap-5xl);
-    font-size: var(--font-size-5xl)
+    font-size: var(--font-size-5xl);
+    overflow:auto;
+    max-height:50vw;
     }
 .frame-parent64, .frame-wrapper33 {
     flex-direction: column
     }
 .frame-parent64 {
-    gap: var(--gap-xl)
+    gap: var(--gap-xl);
+    max-height:46vw;
     }
 .frame-wrapper33 {
     position: absolute;
