--- a/src/pages/Settings.css
+++ b/src/pages/Settings.css
@@ -66,7 +66,11 @@
     font-weight: bold
     }
 .indian-institute-of {
-    color: var(--icon-grey)
+    color: var(--icon-grey);
+    border-radius: 0.8vw;
+    width: 12vw;
+    font-weight: light;
+    
     }
 .frame-parent197 {
     display: flex;
@@ -219,3 +223,9 @@
     color: var(--black);
     font-family: var(--font-avenir-lt-std)
     }
+.close-button{
+   
+    margin-bottom:0.15vw;
+    margin-left: 0.2vw;
+   
+}
