--- a/src/components/StartInterviewPopup.css
+++ b/src/components/StartInterviewPopup.css
@@ -38,7 +38,7 @@
     position: relative;
     letter-spacing: -0.02em;
     line-height: 2.78vw;
-    font-weight: bold
+    font-weight: bold;
     }
 .saturday-august-29-group, .sde-1-interview-parent22 {
     display: flex;
