--- a/src/components/AddStudentsManualPopup.css
+++ b/src/components/AddStudentsManualPopup.css
@@ -1,8 +1,15 @@
-.add-students1, .upload-list-of1 {
+.add-students1 {
     position: relative;
     letter-spacing: -0.02em;
-    line-height: 2.78vw
+    line-height: 2.78vw;
+    font-weight: bold;
     }
+
+.upload-list-of1 {
+        position: relative;
+        letter-spacing: -0.02em;
+        line-height: 2.78vw;
+        }    
 .upload-list-of1 {
     font-size: var(--font-size-lg);
     color: var(--icon-grey);
@@ -59,7 +66,8 @@
     font-size: var(--font-size-xl);
     font-family: var(--font-avenir-lt-std);
     color: var(--white);
-    text-align: left
+    text-align: left;
+    font-weight: bold;
     }
 .send-invite-wrapper {
     border-radius: var(--br-5xs);
