--- a/src/components/AdminHeader.css
+++ b/src/components/AdminHeader.css
@@ -12,7 +12,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start
+    justify-content: flex-start;
+    font-weight: bold;
     }
 .carbonsearch-icon4 {
     position: relative;
@@ -22,7 +23,8 @@
     flex-shrink: 0
     }
 .search-by-anything4 {
-    position: relative
+    position: relative;
+    font-weight: light;
     }
 .carbonsearch-parent2 {
     width: 25.26vw;
