--- a/src/components/InterviewerHeader.css
+++ b/src/components/InterviewerHeader.css
@@ -12,7 +12,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start
+    justify-content: flex-start;
+    font-weight: bold;
     }
 .carbonsearch-icon8 {
     position: relative;
@@ -22,7 +23,8 @@
     flex-shrink: 0
     }
 .search-by-anything8 {
-    position: relative
+    position: relative;
+    font-weight: light;
     }
 .carbonsearch-parent6 {
     width: 25.26vw;
@@ -87,7 +89,8 @@
 .div194 {
     position: relative;
     letter-spacing: -0.02em;
-    line-height: 2.78vw
+    line-height: 2.78vw;
+    font-weight: bold;
     }
 .icround-star-parent2 {
     display: flex;
