--- a/src/components/StudentsAddedSuccessfullyPopup.css
+++ b/src/components/StudentsAddedSuccessfullyPopup.css
@@ -9,7 +9,8 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: flex-start
+    justify-content: flex-start;
+    font-weight: bold;
     }
 .monitor-their-progress {
     position: relative;
