--- a/src/pages/AdminTest.css
+++ b/src/pages/AdminTest.css
@@ -1,7 +1,8 @@
 .active-tests {
     position: relative;
     letter-spacing: -0.02em;
-    line-height: 2.78vw
+    line-height: 2.78vw;
+    font-weight: bold;
     }
 .active-tests-wrapper {
     position: absolute;
@@ -82,7 +83,8 @@
     font-size: 1.05vw;
     font-family: var(--font-avenir-lt-std);
     color: var(--white);
-    text-align: left
+    text-align: left;
+    font-weight: bold;
     }
 .icbaseline-plus-group {
     cursor: pointer;
