--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -24,7 +24,7 @@
     }
 .search-by-anything20 {
     position: relative;
-    font-weight: light
+    font-weight: normal
     }
 .carbonsearch-parent18 {
     width: 25.26vw;
