Schedule page made dynamic

--- a/src/pages/ScheduleIteration1.css
+++ b/src/pages/ScheduleIteration1.css
@@ -136,7 +136,8 @@
 .frame-parent97 {
     flex-direction: column;
     align-items: flex-start;
-    gap: var(--gap-base)
+    gap: var(--gap-base);
+    
     }
 .view-more2 {
     position: relative;
