--- a/src/components/OverallAnalysis.css
+++ b/src/components/OverallAnalysis.css
@@ -27,7 +27,7 @@
     width: 40.32vw;
     height: 25.88vw;
     align-items: center;
-    margin-top: 45px;
-    margin-bottom: 35px;
+    margin-top: 5vw;
+    margin-bottom: 2vw;
     margin-left: -2vw
     }
